<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/lyMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvNameList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvEmailList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:text="@string/email" />

        <ImageView
            android:id="@+id/ivEdit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/edit_item"
            android:foreground="?attr/selectableItemBackground"
            android:scaleType="center"
            app:srcCompat="@drawable/baseline_edit_24" />

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:foreground="?attr/selectableItemBackground"
            android:scaleType="center"
            android:contentDescription="@string/delete_item"
            app:srcCompat="@drawable/baseline_restore_from_trash_24" />

    </LinearLayout>
